--- a/style.css
+++ b/style.css
@@ -36,7 +36,3 @@ h1, h2, h3, h4 {
 iframe {
   margin-top:10px;
 }
-
-img {
-  width: 240px;
-}
